# agents021

./: .gitignore  .trinity_history  Makefile  README.md  pyproject.toml  run.py
core/: config.py  models.py
core/agents/: capabilities.py  runner.py  synthesizer.py
core/agents/templates/: compactor_agent.py  developer_agent.py  file_analyzer_agent.py  planner_agent.py  python_execution_agent.py  search_agent.py
core/cli/: main.py  repl.py  ui.py
core/engine/: optimizer.py  orchestrator.py  planner_pipeline.py  ports.py  run_loop_controller.py  task_executor.py
core/macro_plane/: intent_network.py
core/memory/: blackboard.py  compactor.py  skill_index.py  state_store.py  trajectory_store.py
core/meso_plane/: fsm_workflow.py
core/micro_plane/: capability_registry.py
core/tests/: test_e2e.py
core/utils/: json_stream.py  logging.py
docs/: SDD.md  harness_project_technical_textbook.md  reflection_memory_sota.md
evals/: evaluate_eo.py  evaluate_hle.py  kpi_report.json
examples/: agno_team_demo.py
scratch/: test_developer_synth.py  test_fundamental_grounding.py  test_stream_parser.py
scripts/: inspect_hle.py
tests/: conftest.py  test_blackboard.py  test_concurrency.py  test_models.py  test_optimizer.py  test_planner_pipeline.py  test_run_loop_controller.py  test_runner.py  test_skill_index.py  test_state_store.py  test_synthesizer.py  test_task_executor.py
tools/: code_analyzer.py  data_processor.py  web_search.py
