[project]
name = "agents021"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.17",
    "datasets>=4.8.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.0",
    "httpx[socks]>=0.28.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
